--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Roshan Kumar",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "prettier": "^3.8.1"
   }
 }
